# ovirt-log-collector

./: .gitignore  .gitreview  AUTHORS  Makefile  Makefile.am  README.md  automation.yaml  configure.ac  ovirt-log-collector.spec.in
.copr/: Makefile
.github/workflows/: check-patch.yml
automation/: build-artifacts-manual.sh  build-artifacts.packages  build-artifacts.packages.el7  build-artifacts.repos  build-artifacts.repos.el9stream  build-artifacts.sh  check-patch.packages  check-patch.repos  check-patch.sh
po/: POTFILES.in
src/: Makefile.am  __init__.py  __main__.py  config.py.in.in  engine-log-collector.8  engine-log-collector.in  logcollector.conf  ovirt-log-collector.8  tests.py  util.py
src/helper/: Makefile.am  __init__.py  hypervisors.py
src/inventory_report/: Makefile.am  importDumpIntoNewDb.sh  inventory-profile  inventory-profile.in  ovirt-log-collector-analyzer.sh  produceReport.sh  unpackAndPrepareDump.sh  unpackHostsSosReports.sh  vdsm-config-reader
src/inventory_report/docker/: Dockerfile
src/inventory_report/docker/app/: app.py
src/inventory_report/man/: Makefile.am  ovirt-log-collector-analyzer.8
src/inventory_report/openshift/: Dockerfile  README  gunicorn_config.py  wsgi.py
src/inventory_report/produceReport/: docs-helper  pre-upgrade-checks  produceReport.sh  security-checks
src/inventory_report/produceReport/sqls/: agent_passwords.sql  async_tasks_query_running_tasks.sql  audit_log_query_possible_failures.sql  bookmarks_query_name_value.sql  bookmarks_query_number_of_rows.sql  business_entity_snapshot_query_running_compensation_tasks.sql  cleanup.sql  cleanup_procedures_for_reporting_agent_passwords_as_csv.sql  cluster_query_check_datacenter.sql  cluster_query_check_mixed_selinux_configs.sql  cluster_query_migration_policies.sql  cluster_query_migration_policy_check_legacy.sql  cluster_query_minimum_3_6_compat_version.sql  cluster_query_nonIBRS_CPUS.sql  cluster_query_show_all_clusters.sql  cluster_query_vms_per_cluster.sql  command_entities_query_get_running_commands.sql  database_size.sql  datacenter_query_minimum_3_6_compat_version.sql  datacenter_show_all.sql  dws_query_check_if_its_running.sql  engine_backup_log_check_2weeks_age.sql  engine_backup_log_last_backup.sql  engine_versions_through_all_upgrades.sql  hosts_cpu_Conroe_Penryn.sql  hosts_create_related_lookup_tables.sql  hosts_not_supporting_IBRS_CPUS.sql  hosts_query_all.sql  hosts_query_check_health.sql  hosts_query_check_pretty_name.sql  hosts_query_number_of_hosts.sql  hosts_query_tls_disabled.sql  images_query_invalid_status.sql  images_query_vm_snapshot_id_zero.sql  lun_storage_server_connection_map_query_number_connection_map.sql  luns_query_all_data.sql  mac_pools_query_show_data_based_on_datacenter_and_cluster.sql  network_query_cluster_with_non_ovirtmgmt_as_management_network.sql  networks_table_not_using_network_attachments.sql  networks_table_using_network_attachments.sql  (+34 more)
src/inventory_report/sqls/: cleanup.sql  storage_create_related_lookup_tables.sql  vms_query_health.sql
src/logrotate.d/: Makefile.am
src/rhev/: engine-log-collector.8  logcollector.conf  logcollector.py
src/rhev/helper/: hypervisors.py
src/sos/: Makefile.am
src/sos/plugins/: Makefile.am  engine.py  ovirt.py  ovirt_engine_dwh.py  ovirt_engine_reports.py  postgresql.py
